--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Hello Page</title>
     </head>
-  <body bgcolor="green">
+  <body bgcolor="purple">
     <h1> Hello Wordl</h1>
   </body>
 </html>
