--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title>Hello Page</title>
+    <title>Hello Worl</title>
     </head>
-  <body bgcolor="purple">
+  <body bgcolor="red">
     <h1> Hello Wordl</h1>
   </body>
 </html>
