--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <head>
     <title>Hello Worl</title>
     </head>
-  <body bgcolor="red">
+  <body bgcolor="blue">
     <h1> Hello Wordl</h1>
+        <p> Hello Wordl Para</p>
   </body>
 </html>
