--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Hello Worl</title>
     </head>
-  <body bgcolor="blue">
+  <body bgcolor="yellow">
     <h1> Hello Wordl</h1>
         <p> Hello Wordl Para</p>
   </body>
