--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Hello Worl</title>
+    <title>Hello World</title>
     </head>
   <body bgcolor="yellow">
     <h1> Hello Wordl</h1>
