--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
   <head>
-    <title>Hello World</title>
+    <title>Hello Worl</title>
     </head>
-  <body bgcolor="yellow">
+  <body bgcolor="red">
     <h1> Hello Wordl</h1>
-        <p> Hello Wordl Para</p>
   </body>
 </html>
