--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Hello Worl</title>
     </head>
-  <body bgcolor="red">
+  <body bgcolor="Yellow">
     <h1> Hello Wordl</h1>
   </body>
 </html>
