--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-<html>
-  <head>
-    <title>Hello Worl</title>
-    </head>
-  <body bgcolor="Yellow">
-    <h1> Hello Wordl</h1>
-  </body>
-</html>
+helo world
